# md-diff

./: .gitignore  README.md  ascii_table.py  md-rich-diff.py  pyproject.toml
md_diff/: __init__.py  rich_diff.py
